--- a/resources/sass/_top_body.scss
+++ b/resources/sass/_top_body.scss
@@ -6,6 +6,9 @@
         border-radius: 50%;
         margin: 16px;
     }
+    .top-description {
+        font-size: 14px;
+    }
 }
 
 // SP
@@ -15,5 +18,8 @@
         width: 80px;
         border-radius: 50%;
         margin: 8px;
+    }
+    .top-description {
+        font-size: 3.8vw;
     }
 }
